assets/style.scss
/* ... */
// Keeps the contact me modal above the nav-bar
.modal{
  z-index: 101;
}

#search-container {
  text-align: center;
}

#search-input {
  width: 80%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  box-sizing: border-box;
  font-size: 18px;
  background-color: #eee;
}

// Fixed author description card overflow, at the end of the post.



.contact-nav{
  font-family: "Neucha", "sans-serif";
  font-weight: 400 !important; 
  margin-bottom: 9px !important;
}

.share-box {
  font-weight: bold;
  color: #222;
}

span[data-pullquote] {
  display: block;

  @include mobile {
    display: none;
  }
}

span[data-pullquote]:before {
  content: attr(data-pullquote);
  float: right;
  width: 200px;
  margin: 0 0 0.5em 30px;
  padding: 0 -5% 0 0;
  font-size: 1.3em;
  font-style: italic;
  color: green;
  text-align: center;
}

a {
  color: $blue;
  text-decoration: none;
	cursor: pointer;
  &:hover, &:active {
    color: $blue;
  }
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

p > img {
  text-align: center;
  display: block;
  margin: 0 auto;
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}

.date {
  font-style: italic;
  color: $gray;
}

// Specify the color of the selection
::-moz-selection {
  color: $black;
  background: $lightGray;
}
::selection {
  color: $black;
  background: $lightGray;
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

// USER: remove unrequired css

// .wrapper-masthead {
//   margin-bottom: 25px;
// }

// .masthead {
//   padding: 20px 0;
//   border-bottom: 1px solid $lightGray;

//   @include mobile {
//     text-align: center;
//   }
// }

.site-avatar {
  float: left;
  width: 70px;
  height: 70px;
  margin-right: 15px;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }

  img {
    border-radius: 5px;
  }
}

.site-info {
  float: left;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }
}

.site-name {
  margin: 0;
  color: $darkGray;
  cursor: pointer;
  font-weight: 300;
  font-size: 28px;
  letter-spacing: 1px;
  text-align: left;

  @include mobile {
    text-align: center;
  }
}

.site-description {
  margin: -5px 0 0 0;
  color: $gray;
  font-size: 16px;

  @include mobile {
    margin: 3px 0;
  }
}

// nav {
//   float: right;
//   margin-top: 23px; // @TODO: Vertically middle align
//   font-family: $helveticaNeue;
//   font-size: 18px;

//   @include mobile {
//     float: none;
//     margin-top: 9px;
//     display: block;
//     font-size: 16px;
//   }

//   a {
//     margin-left: 20px;
//     color: $darkGray;
//     text-align: right;
//     font-weight: 300;
//     letter-spacing: 1px;

//     @include mobile {
//       margin: 0 10px;
//       color: $blue;
//     }
//   }
// }

//
// .main
//

.posts > .post {
  padding-bottom: 2em;
  border-bottom: 1px solid $lightGray;
}

.posts > .post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post {
  blockquote {
    margin: 1.8em .8em;
    /*border-left: 2px solid $gray;*/
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
    background-color: #ede1ff;
  }

  .you-may-like{
    margin: 1.8em .8em;
    /*border-left: 2px solid $gray;*/
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
    background-color: #ddffb5;;
  }

  .comments {
    margin-top: 10px;
  }

  .read-more {
    text-transform: uppercase;
    font-size: 15px;
  }
}

.wrapper-container {
  min-height: 100%;
  position: relative;
}

.wrapper-main {
  padding-bottom: 134px;
}

.wrapper-footer {
  bottom: 0;
  width: 100%;
  height: 89px;
}

footer {
  padding: 20px 0;
  text-align: center;
}

body:after {
    background: linear-gradient(to right, #ffffff   0, #2196F3   33%, #E91E63   66%, #000 100%);
    width: 100%;
    height: 5px;
    top: 0;
    position: absolute;
    left: 0;
    content: '';
}

// #bar {
//     background: #000;
//     height: 7px;
//     background-size: cover;
//     background-position: left 60%;
//     position: fixed;
//     top: 0;
//     width: 100%;
//     overflow: hidden;
//     z-index: 1000;
// }

.post h1{
  text-align: center;
  font-kerning: auto;
  font-feature-settings: "kern","liga","dlig","hlig","cswh";
  line-height: 1.2;
}

.page h1{
  text-align: center;
  font-kerning: auto;
  font-feature-settings: "kern","liga","dlig","hlig","cswh";
  line-height: 1.2;
}

.author_title{
  text-align: center;
  color: #939aa1;
  letter-spacing: 2px;
}

.post_date{
  text-align: center;
  color: #939aa1;
}

.cd-container a {
  color: #30434e;
  text-decoration: none;
}

.cd-container img {
  max-width: 100%;
}

.cd-container h1, .cd-container h2 {
  font-weight: bold;
}

/* --------------------------------

Modules - reusable parts of our design

-------------------------------- */
.cd-container {
  /* this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width */
  width: 90%;
  max-width: 1170px;
  margin: 0 auto;
}
.cd-container::after {
  /* clearfix */
  content: '';
  display: table;
  clear: both;
}

#cd-timeline {
  position: relative;
  padding: 2em 0;
  margin-top: 2em;
  margin-bottom: 2em;
}
#cd-timeline::before {
  /* this is the vertical line */
  content: '';
  position: absolute;
  top: 0;
  left: 18px;
  height: 100%;
  width: 4px;
  background: #d7e4ed;
}
/* ... */

